# FineTuning---Instructionbased

./: README.md  calculate_metrics.py  customer_support_responses_train.csv  estimator_launcher.ipynb  inference_app.py  load_dataset.ipynb  main.py  metrics.json  pyproject.toml  rag_app_backend.py  rag_app_ui.py  requirements.txt
experiments/: estimator_launcher.ipynb
inference/: inference.py
scripts/: train.py
